syntax = "proto3";

package user;

// 用户服务定义
service UserService {
  // 获取用户信息
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
}

// 获取用户信息请求
message GetUserInfoRequest {
  int64 user_id = 1;
}

// 获取用户信息响应
message GetUserInfoResponse {
  int64 id = 1;
  string username = 2;
  optional string email = 3;
  string created_at = 4;
  string updated_at = 5;
}